tests/ui/type-alias-impl-trait/impl-with-unconstrained-param.stderr
error[E0207]: the type parameter `T` is not constrained by the impl trait, self type, or predicates
  --> $DIR/impl-with-unconstrained-param.rs:11:6
   |
LL | impl<T> X for () {
   |      ^ unconstrained type parameter
   |
help: either remove the unused type parameter `T`, or make use of it
   |
LL - impl<T> X for () {
LL + impl X for () {
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0207`.
